add more info about withdraw and stake
