# api/openapi.json
@@ -3097,17 +3097,11 @@
    },
    "DepositTokenStakeAction": {
     "properties": {
-     "amount": {
-      "example": "1000000000",
-      "type": "string",
-      "x-js-format": "bigint"
+     "protocol": {
+      "$ref": "#/components/schemas/Protocol"
      },
-     "pool": {
-      "example": "Ethena",
-      "type": "string"
-     },
-     "pool_token_master": {
-      "$ref": "#/components/schemas/AccountAddress"
+     "stake_meta": {
+      "$ref": "#/components/schemas/Price"
      },
      "staker": {
       "$ref": "#/components/schemas/AccountAddress"
@@ -3115,7 +3109,7 @@
     },
     "required": [
      "staker",
-     "pool"
+     "protocol"
     ],
     "type": "object"
    },
@@ -5364,6 +5358,22 @@
     ],
     "type": "object"
    },
+   "Protocol": {
+    "properties": {
+     "image": {
+      "example": "https://cache.tonapi.io/images/jetton.jpg",
+      "type": "string"
+     },
+     "name": {
+      "example": "Ethena",
+      "type": "string"
+     }
+    },
+    "required": [
+     "name"
+    ],
+    "type": "object"
+   },
    "Purchase": {
     "properties": {
      "amount": {
@@ -6861,17 +6871,11 @@
    },
    "WithdrawTokenStakeRequestAction": {
     "properties": {
-     "amount": {
-      "example": "1000000000",
-      "type": "string",
-      "x-js-format": "bigint"
+     "protocol": {
+      "$ref": "#/components/schemas/Protocol"
      },
-     "pool": {
-      "example": "Ethena",
-      "type": "string"
-     },
-     "pool_token_master": {
-      "$ref": "#/components/schemas/AccountAddress"
+     "stake_meta": {
+      "$ref": "#/components/schemas/Price"
      },
      "staker": {
       "$ref": "#/components/schemas/AccountAddress"
@@ -6879,7 +6883,7 @@
     },
     "required": [
      "staker",
-     "pool"
+     "protocol"
     ],
     "type": "object"
    },
